init demo
